--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     background-image: linear-gradient(#962651, #000);
     height: 100dvh;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 h1 {
+    animation: bot-to-rest 0.3s ease-in-out;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 80px;
     margin-top: 8%;
@@ -12,6 +13,7 @@ h1 {
     color: bisque;
 }
 p {
+    animation: bot-to-rest 0.3s ease-in-out;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 1%;
     font-weight: bolder;
@@ -21,12 +23,14 @@ p {
     font-weight: bold;
 }
 p span {
+    animation: bot-to-rest 0.3s ease-in-out;
     text-align: center;
     color: #e68181;
     font-size: 32px;
 }
 
 .container {
+    animation: bot-to-rest 0.3s ease-in-out;
     flex-wrap: wrap;
     margin: auto;
     display: flex;
@@ -36,6 +40,7 @@ p span {
     row-gap: 10px;
     width: 85%;
 }
+
 .gun {
     transition: transform .5s ease-in-out, margin .5s ease-in-out;
     padding: 0%;    
@@ -47,5 +52,8 @@ p span {
 }
 .gun:hover {
     transform: scale(110%);
-    margin: auto 15px;
+}
+@keyframes bot-to-rest {
+    from {transform: translateY(20%);}
+    to {transform: translateY(0);}
 }
