--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     background-image: linear-gradient(#962651, #000);
-    height: 100dvh;
-    overflow-y: scroll;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 h1 {
     animation: bot-to-rest 0.3s ease-in-out;
@@ -12,21 +13,30 @@ h1 {
     text-align: center;
     color: bisque;
 }
-p {
+#ps {
+    gap: 10px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+#p-ends {
     animation: bot-to-rest 0.3s ease-in-out;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 1%;
-    font-weight: bolder;
+    font-weight: bold;
     text-align: center;
     color: #fff;
     font-size: 32px;
-    font-weight: bold;
 }
-p span {
+#DAYSLEFT {
     animation: bot-to-rest 0.3s ease-in-out;
     text-align: center;
     color: #e68181;
     font-size: 32px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 1%;
 }
 
 .container {
@@ -47,13 +57,12 @@ p span {
     margin: auto 10px;
     max-width: 360px;
     min-width: 150px;
-    min-height: auto;
     height: calc(width * 1.5);
 }
 .gun:hover {
     transform: scale(110%);
 }
 @keyframes bot-to-rest {
-    from {transform: translateY(20%);}
-    to {transform: translateY(0);}
+    from {transform: translateY(20%);opacity: 0;}
+    to {transform: translateY(0);opacity: 1;}
 }
